@@ -8,6 +8,7 @@ virtualbox (4.1.0-dfsg-1) UNRELEASED; urgency=low
     applied upstream.
   * Add 34-fix-vboxpci-build.patch to fix a VBoxPCI build failure.
   * Add vboxpci kernel module to virtualbox-dkms and virtualbox-source.
+  * Update package names in 04-vboxdrv-references.patch.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 29 Jul 2011 18:04:05 +0200
 
